--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <title>Vaughn Paulger</title>
   <link href="build/styles/style.min.css" type="text/css" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="slick-1.8.1/slick/slick-theme.css"/>
 </head>
 
 <body>
   <header>
-    <!-- <div id="backgroundDiv"> -->
     <div id="headerBlock"></div>  
     <a href="index.html">
       <img id="vaughnPaulgerLogo" src="assets/vaughnPaulgerLogo.png" alt="Vaughn Paulger">
@@ -26,16 +26,10 @@
       <li><a class="navLinks" id="experience">EXPERIENCE</a></li>
       <li><a class="navLinks" id="contact">CONTACT</a></li>
     </ul>
-    <!-- </div> -->
   </header>
   
   <div id="flexboxWrapper">
     <section id="aboutSection">
-      <!-- <ul class="secondNavigation navigation">
-        <li><a class="navLinks" id="about2">ABOUT</a></li>
-        <li><a class="navLinks" id="experience2">EXPERIENCE</a></li>
-        <li><a class="navLinks" id="contact2">CONTACT</a></li>
-      </ul> -->
       <ul class="testNav">
         <li><a id="about2">About</a></li>
         <li><a id="experience2">Experience</a></li>
@@ -48,21 +42,23 @@
             I am an explorer who likes to push the boundaries of design and adventure.<br>
             Lets create some cool things together!</p>
         </div>
+
+        <div class="testCarousel">
+          <div>S</div>          
+          <div>T</div>
+          <div>U</div>
+          <div>F</div>
+        </div>
       </div>
     </section>
 
     <section id="experienceSection">
-      <!-- <ul class="secondNavigation navigation">
-        <li><a id="about2">ABOUT</a></li>
-        <li><a id="experience2">EXPERIENCE</a></li>
-        <li><a id="contact2">CONTACT</a></li>
-      </ul> -->
       <ul class="testNav">
-          <li><a id="about2">About</a></li>
-          <li><a id="experience2">Experience</a></li>
-          <li><a id="contact2">Contact</a></li>
-        </ul>
-      <div class="experienceContainer">
+        <li><a id="about2">About</a></li>
+        <li><a id="experience2">Experience</a></li>
+        <li><a id="contact2">Contact</a></li>
+      </ul>
+      <div class="experienceContainer" data-slick='{"slidesToShow": 4, "slidesToScroll": 4}'>
         <div class="experienceBlocks">
           <a href="http://leanelson.com/" target="_blank">
             <div class="image1">
@@ -119,17 +115,11 @@
     </section>
   
     <section id="contactSection">
-      <!-- <ul class="secondNavigation navigation">
-        <li><a class="navLinks" id="about2">ABOUT</a></li>
-        <li><a class="navLinks" id="experience2">EXPERIENCE</a></li>
-        <li><a class="navLinks" id="contact2">CONTACT</a></li>
-      </ul> -->
       <ul class="testNav">
         <li><a id="about2">About</a></li>
         <li><a id="experience2">Experience</a></li>
         <li><a id="contact2">Contact</a></li>
       </ul>
-      <!-- Please contact me for any questions or inquiries. -->
       <div id="contactContainer">
         <p>SAY HELLO!</p>
         <form name="contactForm" action="./index.html" method="POST">
@@ -147,12 +137,13 @@
         </form>
       </div>
     </section>
-  </div>
+  </div><!-- end flexbox -->
+
   <footer>
     <!-- <i class="fab fa-linkedin"></i> -->
   </footer>
   
-
+  <!-- smoke effect wrapper -->
   <div id="wrap">
     <div id="viewport">
       <div class="tv">
@@ -160,15 +151,16 @@
       </div>
     </div>
   </div>
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="http://demo.web3designs.com/jquery-easing.min.js"></script>
   <script src="http://daneden.github.io/animate.css/animate.min.css"></script>
   <script src="build/js/script.min.js"></script>
-  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-  <script type="text/javascript" src="slick/slick.min.js"></script>
-				
+  <script type="text/javascript" src="slick-1.8.1/slick/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="slick-1.8.1/slick/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="slick-1.8.1/slick/slick.min.js"></script>
+  
 </body>
 
 
