--- a/index.html
+++ b/index.html
@@ -53,12 +53,14 @@
     </section>
 
     <section id="experienceSection">
+
       <ul class="testNav">
         <li><a id="about2">About</a></li>
         <li><a id="experience2">Experience</a></li>
         <li><a id="contact2">Contact</a></li>
       </ul>
-      <div class="experienceContainer" data-slick='{"slidesToShow": 4, "slidesToScroll": 4}'>
+
+      <div class="experienceContainer">
         <div class="experienceBlocks">
           <a href="http://leanelson.com/" target="_blank">
             <div class="image1">
@@ -111,15 +113,18 @@
           <h3>Pong Game</h3>
           <p>Web Game Development</p>
         </div>
-      </div>
+      </div><!-- end experiencContainer -->
+
     </section>
   
     <section id="contactSection">
+
       <ul class="testNav">
         <li><a id="about2">About</a></li>
         <li><a id="experience2">Experience</a></li>
         <li><a id="contact2">Contact</a></li>
       </ul>
+
       <div id="contactContainer">
         <p>SAY HELLO!</p>
         <form name="contactForm" action="./index.html" method="POST">
@@ -136,6 +141,7 @@
           <input id="contactSubmitButton" type="submit" value="Get in touch">
         </form>
       </div>
+
     </section>
   </div><!-- end flexbox -->
 
@@ -160,7 +166,7 @@
   <script type="text/javascript" src="slick-1.8.1/slick/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="slick-1.8.1/slick/jquery-migrate-1.2.1.min.js"></script>
   <script type="text/javascript" src="slick-1.8.1/slick/slick.min.js"></script>
-  
+
 </body>
 
 
